<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.justcorrections.grit.account.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <!-- image or logo -->

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@android:color/white"
            android:contentDescription="@string/logo_description"
            android:transitionName="logo" />

        <!-- username input -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_logo"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:paddingEnd="4dp"
            android:paddingStart="48dp"
            android:paddingTop="4dp"
            android:theme="@style/TextHint"
            android:transitionName="user_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>


        <!-- password input -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_layout"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:paddingEnd="4dp"
            android:paddingStart="48dp"
            android:paddingTop="4dp"
            android:theme="@style/TextHint"
            android:transitionName="pass_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!-- person icon -->

        <ImageView
            android:id="@+id/login_user_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_below="@id/login_logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/user_icon_description"
            android:src="@drawable/ic_user"
            android:transitionName="user_icon" />

        <!-- key icon -->

        <ImageView
            android:id="@+id/login_pass_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_below="@id/login_user_layout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/password_icon_description"
            android:src="@drawable/ic_key"
            android:transitionName="pass_icon" />

        <!-- login button -->

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_pass_layout"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:transitionName="login_button" />

        <!-- forgot password button -->

        <Button
            android:id="@+id/login_forgot_password_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/login_login_button"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/forgot_your_password"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <!-- create account button -->

        <Button
            android:id="@+id/login_signup_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/login_login_button"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/create_an_account"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </RelativeLayout>

</ScrollView>
